--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Reference</title>
-    <link rel="stylesheet" href="/medi_refer_style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="medi">  
